--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,27 @@
     margin: 0;
     padding: 0;
 }
+.wrapper {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    height: 700px;
+}
+.menu {
+    display: flex;
+    justify-content: end;
+}
+.prom {
+   
+}
+ul li {
+    font-size: 20px;
+    text-transform: uppercase;
+    list-style: none;
+    margin: 10px 15px;
+}
+ul li a {
+   
+    text-decoration: none;
+    color: #000;
+}
