--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,18 @@
     margin: 0;
     padding: 0;
 }
+
+.container{
+    display: flex;
+
+}
+
+.item{
+    width: calc((100% - 300px) / 2);
+    background-color: #59f559;
+
+}
+
+.item_photo{
+    width: 300px;
+}
