--- a/css/style.css
+++ b/css/style.css
@@ -18,5 +18,7 @@
      background-color: #000000;
      color: #ffffff;
      margin-top: 8px;
+     margin-left: auto;
+     margin-right: auto;
  }
 
